feat: Campaign and dataset management
