# src/main/resources/api/openapi.yaml
@@ -535,7 +535,27 @@ paths:
         '500':
           description: Error occured
           content: { }
-
+  /campaigns/{campaign_id}/start:
+    post:
+      tags:
+        - Campaign
+      summary: Starts the campaign for the given campaign id
+      description: Starts the campaign for the given campaign id
+      operationId: startCampaign
+      parameters:
+        - name: campaign_id
+          in: path
+          description: Campaign Identifier
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '201':
+          description: Campaign started successfully
+        '500':
+          description: Error occured
+          content: { }
   /datasets:
     get:
       tags:
@@ -598,4 +618,30 @@ paths:
                 $ref: '#/components/schemas/DatasetDto'
         '404':
           description: Given Dataset ID doesn't exist
+          content: { }
+    put:
+      tags:
+        - Dataset
+      summary: Update the dataset
+      description: Update the given dataset
+      operationId: updateDatatset
+      parameters:
+        - name: dataset_id
+          in: path
+          description: Dataset Identifier
+          required: true
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        description: New Dataset object
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DatasetDto'
+      responses:
+        '204':
+          description: Datset updated successfully
+        '500':
+          description: Given dataset ID doesn't exist
           content: { }
